Fixing aligning issues with navbar

--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,17 @@
  }
 
 
-p, ol, li {
+ol, li {
+font-size:18px;
+}
+
+li.publications {
+font-size:18px;
+margin-top: 20px;
+margin-bottom: 10px;
+}
+
+p {
 font-size:18px;
 margin-top: 30px;
 margin-bottom: 10px;
@@ -74,12 +84,6 @@ font-size: 20px;
 	border-color: transparent;
 	}
 	
-	.jumbotron-page {
- width:100%;
-  height: 10vh;
-  /*background:#88888;*/
-  display:table;
-}
 }
 
 .jumbotron{
@@ -102,6 +106,3 @@ font-size: 20px;
 text-align: center;
 
 }
-
-.jumbotron .container {
-  /*background:rgba(255,255,255, 0.9);*/}
